--- a/deploy_tools/gunicorn-upstart.template.conf
+++ b/deploy_tools/gunicorn-upstart.template.conf
@@ -5,13 +5,11 @@ stop on shutdown
 
 respawn
 
-setuid dvoong
-chdir /home/dvoong/sites/SITENAME/source
+setuid elspeth
+chdir /home/elspeth/sites/SITENAME/source
 
 exec ../virtualenv/bin/gunicorn \
     --bind unix:/tmp/SITENAME.socket \
     --access-logfile ../access.log \
     --error-logfile ../error.log \
-    --log-file=- \
-    superlists.wsgi:application \
-    2> ../log.log
+    superlists.wsgi:application
